--- a/index.html
+++ b/index.html
@@ -4,30 +4,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="css/styles.css">
+
   <title>Frontend Mentor | Equalizer landing page</title>
 </head>
 <body>
 
-  We make your music sound extraordinary.
+  <div class="content-container">
+    <img class="bg-pattern-1" src="images/bg-pattern-1.svg" alt="">
 
-  A system audio equalizer specifically designed for Android and iOS. Freely tune the 
-  way your music sounds with a professional grade parametric EQ & volume mixer. Control 
-  bass, mids, treble, gain control, reverb, and more!
+    <img class="logo-1" src="images/logo.svg" alt="">
 
-  Premium EQ
+    <h1>We make your music sound extraordinary.</h1>
+    <p class="description">A system audio equalizer specifically designed for Android and iOS. Freely tune the
+    way your music sounds with a professional grade parametric EQ & volume mixer. Control
+    bass, mids, treble, gain control, reverb, and more!</p>
+  </div>
 
-  Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take 
-  your listening experience to a whole new level and access all our incredible features!
+  <div class="details">
+    <img class="bg-pattern-2" src="images/bg-pattern-2.svg" alt="">
+    <img class="illustration" src="images/illustration-app.png" alt="illustration">
+    <div class="premium">
+      <h2>Premium EQ</h2>
+      <p class="premium-description">Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
+      your listening experience to a whole new level and access all our incredible features!</p>
+      <p class="price">$4 <span>/ month</span></p>
+      <a class="ios" href="#"><img src="images/icon-apple.svg" alt=""> <span>iOS Download</span></a>
+      <a class="android" href="#"><img src="images/icon-android.svg" alt=""> <span>Android Download</span></a>
+    </div>
+  </div>
 
-  $4 / month
-
-  iOS Download
-  Android Download
-
-  All rights reserved © Equalizer 2021
-  Have any problems? Contact us via social media or email us at equalizer@example.com
+  <footer>
+    <div class="logo-2">
+      <img src="images/logo.svg" alt="">
+    </div>
+    <div class="info">
+      <p>All rights reserved © Equalizer 2021</p>
+      <p>Have any problems? Contact us via social media or email us at <strong>equalizer@example.com</strong></p>
+    </div>
+    <div class="socials">
+      <img src="images/icon-facebook.svg" alt="">
+      <img src="images/icon-instagram.svg" alt="">
+      <img class="twitter" src="images/icon-twitter.svg" alt="">
+    </div>
+  </footer>
 
 </body>
 </html>
